Encapsulate extended resources in ResourceExtensions
