# gen/pb-go/flyteidl/core/tasks.pb.validate.go
@@ -113,6 +113,83 @@ var _ interface {
 	ErrorName() string
 } = GPUAcceleratorValidationError{}
 
+// Validate checks the field values on ResourceExtensions with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, an error is returned.
+func (m *ResourceExtensions) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	if v, ok := interface{}(m.GetGpuAccelerator()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return ResourceExtensionsValidationError{
+				field:  "GpuAccelerator",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
+	return nil
+}
+
+// ResourceExtensionsValidationError is the validation error returned by
+// ResourceExtensions.Validate if the designated constraints aren't met.
+type ResourceExtensionsValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e ResourceExtensionsValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e ResourceExtensionsValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e ResourceExtensionsValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e ResourceExtensionsValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e ResourceExtensionsValidationError) ErrorName() string {
+	return "ResourceExtensionsValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e ResourceExtensionsValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sResourceExtensions.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = ResourceExtensionsValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = ResourceExtensionsValidationError{}
+
 // Validate checks the field values on Resources with the rules defined in the
 // proto definition for this message. If any rules are violated, an error is returned.
 func (m *Resources) Validate() error {
@@ -150,10 +227,10 @@ func (m *Resources) Validate() error {
 
 	}
 
-	if v, ok := interface{}(m.GetGpuAccelerator()).(interface{ Validate() error }); ok {
+	if v, ok := interface{}(m.GetExtensions()).(interface{ Validate() error }); ok {
 		if err := v.Validate(); err != nil {
 			return ResourcesValidationError{
-				field:  "GpuAccelerator",
+				field:  "Extensions",
 				reason: "embedded message failed validation",
 				cause:  err,
 			}
