# gen/pb-go/flyteidl/service/external_plugin_service.swagger.json
@@ -630,6 +630,16 @@
       },
       "title": "Primitive Types"
     },
+    "coreResourceExtensions": {
+      "type": "object",
+      "properties": {
+        "gpu_accelerator": {
+          "$ref": "#/definitions/coreGPUAccelerator",
+          "description": "GPU accelerator to select for task. Contains information about device type, and\nfor multi-instance GPUs, the partition size to use."
+        }
+      },
+      "description": "Encapsulates all non-standard resources, not captured by v1.ResourceRequirements, to\nallocate to a task."
+    },
     "coreResourceType": {
       "type": "string",
       "enum": [
@@ -659,9 +669,9 @@
           },
           "description": "Defines a set of bounds (e.g. min/max) within which the task can reliably run. ResourceNames must be unique\nwithin the list."
         },
-        "gpu_accelerator": {
-          "$ref": "#/definitions/coreGPUAccelerator",
-          "description": "GPU accelerator to select for task. Contains information about device type, and\nfor multi-instance GPUs, the partition size to use."
+        "extensions": {
+          "$ref": "#/definitions/coreResourceExtensions",
+          "description": "Encapsulates all non-standard resources, not captured by\nv1.ResourceRequirements, to allocate to a task."
         }
       },
       "description": "A customizable interface to convey resources requested for a container. This can be interpreted differently for different\ncontainer engines."
