# gen/pb-go/flyteidl/service/flyteadmin/model_core_resource_extensions.go
@@ -1,0 +1,16 @@
+/*
+ * flyteidl/service/admin.proto
+ *
+ * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
+ *
+ * API version: version not set
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+
+package flyteadmin
+
+// Encapsulates all non-standard resources, not captured by v1.ResourceRequirements, to allocate to a task.
+type CoreResourceExtensions struct {
+	// GPU accelerator to select for task. Contains information about device type, and for multi-instance GPUs, the partition size to use.
+	GpuAccelerator *CoreGpuAccelerator `json:"gpu_accelerator,omitempty"`
+}
