# gen/pb_python/flyteidl/service/flyteadmin/flyteadmin/models/__init__.py
@@ -202,6 +202,7 @@ from flyteadmin.models.core_primitive import CorePrimitive
 from flyteadmin.models.core_promise_attribute import CorePromiseAttribute
 from flyteadmin.models.core_quality_of_service import CoreQualityOfService
 from flyteadmin.models.core_quality_of_service_spec import CoreQualityOfServiceSpec
+from flyteadmin.models.core_resource_extensions import CoreResourceExtensions
 from flyteadmin.models.core_resource_type import CoreResourceType
 from flyteadmin.models.core_resources import CoreResources
 from flyteadmin.models.core_retry_strategy import CoreRetryStrategy
