# gen/pb_python/flyteidl/service/flyteadmin/flyteadmin/models/core_resource_extensions.py
@@ -1,0 +1,119 @@
+# coding: utf-8
+
+"""
+    flyteidl/service/admin.proto
+
+    No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)  # noqa: E501
+
+    OpenAPI spec version: version not set
+    
+    Generated by: https://github.com/swagger-api/swagger-codegen.git
+"""
+
+
+import pprint
+import re  # noqa: F401
+
+import six
+
+from flyteadmin.models.core_gpu_accelerator import CoreGPUAccelerator  # noqa: F401,E501
+
+
+class CoreResourceExtensions(object):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    """
+    Attributes:
+      swagger_types (dict): The key is attribute name
+                            and the value is attribute type.
+      attribute_map (dict): The key is attribute name
+                            and the value is json key in definition.
+    """
+    swagger_types = {
+        'gpu_accelerator': 'CoreGPUAccelerator'
+    }
+
+    attribute_map = {
+        'gpu_accelerator': 'gpu_accelerator'
+    }
+
+    def __init__(self, gpu_accelerator=None):  # noqa: E501
+        """CoreResourceExtensions - a model defined in Swagger"""  # noqa: E501
+
+        self._gpu_accelerator = None
+        self.discriminator = None
+
+        if gpu_accelerator is not None:
+            self.gpu_accelerator = gpu_accelerator
+
+    @property
+    def gpu_accelerator(self):
+        """Gets the gpu_accelerator of this CoreResourceExtensions.  # noqa: E501
+
+        GPU accelerator to select for task. Contains information about device type, and for multi-instance GPUs, the partition size to use.  # noqa: E501
+
+        :return: The gpu_accelerator of this CoreResourceExtensions.  # noqa: E501
+        :rtype: CoreGPUAccelerator
+        """
+        return self._gpu_accelerator
+
+    @gpu_accelerator.setter
+    def gpu_accelerator(self, gpu_accelerator):
+        """Sets the gpu_accelerator of this CoreResourceExtensions.
+
+        GPU accelerator to select for task. Contains information about device type, and for multi-instance GPUs, the partition size to use.  # noqa: E501
+
+        :param gpu_accelerator: The gpu_accelerator of this CoreResourceExtensions.  # noqa: E501
+        :type: CoreGPUAccelerator
+        """
+
+        self._gpu_accelerator = gpu_accelerator
+
+    def to_dict(self):
+        """Returns the model properties as a dict"""
+        result = {}
+
+        for attr, _ in six.iteritems(self.swagger_types):
+            value = getattr(self, attr)
+            if isinstance(value, list):
+                result[attr] = list(map(
+                    lambda x: x.to_dict() if hasattr(x, "to_dict") else x,
+                    value
+                ))
+            elif hasattr(value, "to_dict"):
+                result[attr] = value.to_dict()
+            elif isinstance(value, dict):
+                result[attr] = dict(map(
+                    lambda item: (item[0], item[1].to_dict())
+                    if hasattr(item[1], "to_dict") else item,
+                    value.items()
+                ))
+            else:
+                result[attr] = value
+        if issubclass(CoreResourceExtensions, dict):
+            for key, value in self.items():
+                result[key] = value
+
+        return result
+
+    def to_str(self):
+        """Returns the string representation of the model"""
+        return pprint.pformat(self.to_dict())
+
+    def __repr__(self):
+        """For `print` and `pprint`"""
+        return self.to_str()
+
+    def __eq__(self, other):
+        """Returns true if both objects are equal"""
+        if not isinstance(other, CoreResourceExtensions):
+            return False
+
+        return self.__dict__ == other.__dict__
+
+    def __ne__(self, other):
+        """Returns true if both objects are not equal"""
+        return not self == other
